# stegaboo

./: .gitignore  README.md  pyproject.toml
src/stegaboo/: cli.py  config.py  decode.py  encode.py  ui.py
tests/: test_basic.py  test_errors.py
